Doxygen tutorials: cpp done

--- a/doc/opencv.bib
+++ b/doc/opencv.bib
@@ -824,3 +824,11 @@
   journal = {Machine learning},
   volume = {10}
 }
+@inproceedings{vacavant2013benchmark,
+  title={A benchmark dataset for outdoor foreground/background extraction},
+  author={Vacavant, Antoine and Chateau, Thierry and Wilhelm, Alexis and Lequi{\`e}vre, Laurent},
+  booktitle={Computer Vision-ACCV 2012 Workshops},
+  pages={291--300},
+  year={2013},
+  organization={Springer}
+}
