--- a/doc/opencv.bib
+++ b/doc/opencv.bib
@@ -291,6 +291,18 @@
     year = {2005}
 }
 
+@article{PeiLin95,
+    author = {Soo-Chang Pei and Chao-Nan Lin},
+    title = {Image normalization for pattern recognition},
+    journal = {Image and Vision Computing},
+    volume = {13},
+    number = {10},
+    pages = {711-723},
+    year = {1995},
+    issn = {0262-8856},
+    doi = {http://dx.doi.org/10.1016/0262-8856(95)98753-G}
+}
+
 # '''[Bradski98]''' G.R. Bradski. Computer vision face tracking as a component of a perceptual user interface. In Workshop on Applications of Computer Vision, pages 214?219, Princeton, NJ, Oct. 1998.<<BR>> Updated version can be found at http://www.intel.com/technology/itj/q21998/articles/art\_2.htm.<<BR>> Also, it is included into OpenCV distribution ([[attachment:camshift.pdf]])
 # '''[Burt81]''' P. J. Burt, T. H. Hong, A. Rosenfeld. Segmentation and Estimation of Image Region Properties Through Cooperative Hierarchical Computation. IEEE Tran. On SMC, Vol. 11, N.12, 1981, pp. 802-809.
 # '''[Canny86]''' J. Canny. A Computational Approach to Edge Detection, IEEE Trans. on Pattern Analysis and Machine Intelligence, 8(6), pp. 679-698 (1986).
