User guide converted to doxygen

--- a/doc/opencv.bib
+++ b/doc/opencv.bib
@@ -832,3 +832,11 @@
   year={2013},
   organization={Springer}
 }
+@incollection{Liao2007,
+  title={Learning multi-scale block local binary patterns for face recognition},
+  author={Liao, Shengcai and Zhu, Xiangxin and Lei, Zhen and Zhang, Lun and Li, Stan Z},
+  booktitle={Advances in Biometrics},
+  pages={828--837},
+  year={2007},
+  publisher={Springer}
+}
