add Doxygen documentation for DepthmapDenoiseWeightedHuber

--- a/doc/opencv.bib
+++ b/doc/opencv.bib
@@ -147,6 +147,16 @@
   number = {6},
   publisher = {IEEE}
 }
+@article{Chambolle11,
+  author = {Chambolle, A. and Pock, T.},
+  title = {A First-Order Primal-Dual Algorithm for Convex Problems with Applications to Imaging},
+  journal = {JMIV},
+  volume = {40},
+  year = {2011},
+  number = {1},
+  month = {May},
+  pages = {120--145}
+}
 @ARTICLE{ChambolleEtAl,
   author = {Chambolle, Antonin and Caselles, Vicent and Cremers, Daniel and Novaga, Matteo and Pock, Thomas},
   title = {An introduction to total variation for image analysis},
@@ -516,6 +526,14 @@
   booktitle = {VISAPP (1)},
   year = {2009},
   pages = {331--340}
+}
+@INPROCEEDINGS{Newcombe11,
+  author = {Newcombe, R.A. and Lovegrove, S.J. and Davison, A.J.},
+  title = {DTAM: Dense tracking and mapping in real-time},
+  booktitle = {Computer Vision (ICCV), 2011 IEEE International Conference on},
+  year = {2011},
+  pages = {2320--2327},
+  organization = {IEEE}
 }
 @ARTICLE{Nister03,
   author = {Nist{\'e}r, David},
