documentation and licence update

--- a/doc/opencv.bib
+++ b/doc/opencv.bib
@@ -1,6 +1,6 @@
 @comment{Bib-it,
   This file was created by Bib-it 1.4
-  97 entries written
+  99 entries written
 }
 
 @INCOLLECTION{ABD12,
@@ -839,4 +839,25 @@
   pages={828--837},
   year={2007},
   publisher={Springer}
+}
+@article{Perf:FT,
+  title={Fuzzy transforms: Theory and applications},
+  author={Perfilieva, Irina},
+  journal={Fuzzy sets and systems},
+  volume={157},
+  number={8},
+  pages={993--1023},
+  year={2006},
+  publisher={Elsevier}
+}
+@article{Perf:rec,
+  title={Image Reconstruction by means of F-transform},
+  author={Perfilieva, Irina and Vla{\v{s}}{\'a}nek, Pavel},
+  journal={Knowledge-Based Systems},
+  keywords = {myown},
+  volume={70},
+  pages={55--63},
+  year={2014},
+  doi = {10.1016/j.knosys.2014.04.007},
+  publisher={Elsevier}
 }
