--- a/modules/calib3d/doc/calib3d.bib
+++ b/modules/calib3d/doc/calib3d.bib
@@ -39,3 +39,15 @@
   year={2013},
   publisher={IEEE}
 }
+
+@inproceedings{strobl2011iccv,
+  title={More accurate pinhole camera calibration with imperfect planar target},
+  author={Strobl, Klaus H. and Hirzinger, Gerd},
+  booktitle={2011 IEEE International Conference on Computer Vision (ICCV)},
+  pages={1068-1075},
+  month={Nov},
+  year={2011},
+  address={Barcelona, Spain},
+  publisher={IEEE},
+  doi={10.1109/ICCVW.2011.6130369}
+}
