Add link to strobl2011iccv paper

--- a/modules/calib3d/doc/calib3d.bib
+++ b/modules/calib3d/doc/calib3d.bib
@@ -49,5 +49,6 @@
   year={2011},
   address={Barcelona, Spain},
   publisher={IEEE},
+  url={https://elib.dlr.de/71888/1/strobl_2011iccv.pdf},
   doi={10.1109/ICCVW.2011.6130369}
 }
