Removed extra curly braces

--- a/doc/opencv.bib
+++ b/doc/opencv.bib
@@ -1,8 +1,3 @@
-@comment{Bib-it,
-  This file was created by Bib-it 1.4
-  97 entries written
-}
-
 @INCOLLECTION{ABD12,
   author = {Alcantarilla, Pablo Fern{\'a}ndez and Bartoli, Adrien and Davison, Andrew J},
   title = {KAZE features},
@@ -331,7 +326,7 @@
   number = {5},
   pages= {476--480},
   pmid= {708},
-  title= {{Direct least square fitting of ellipses}},
+  title= {Direct least square fitting of ellipses},
   volume = {21},
   year= {1999}
 }
@@ -364,9 +359,9 @@
   journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
   number = {11},
   pages= {1115--1138},
-  title= {{Estimation of planar curves, surfaces, and nonplanar
+  title= {Estimation of planar curves, surfaces, and nonplanar
   space curves defined by implicit equations with
-  applications to edge and range image segmentation}},
+  applications to edge and range image segmentation},
   volume = {13},
   year= {1991}
 }
