--- a/doc/opencv.bib
+++ b/doc/opencv.bib
@@ -108,7 +108,7 @@
   booktitle = {Applications of Computer Vision, 2000, Fifth IEEE Workshop on.},
   year = {2000},
   pages = {238--244},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @ARTICLE{Bradski98,
   author = {Bradski, Gary R},
@@ -146,7 +146,7 @@
   booktitle = {Computational Photography (ICCP), 2012 IEEE International Conference on},
   year = {2012},
   pages = {1--7},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @ARTICLE{Canny86,
   author = {Canny, John},
@@ -174,7 +174,7 @@
   pages = {257--266},
   volume = {21},
   number = {3},
-  organization = {ACM}
+  publisher = {ACM}
 }
 @INPROCEEDINGS{DM03,
   author = {Drago, Fr{\'e}d{\'e}ric and Myszkowski, Karol and Annen, Thomas and Chiba, Norishige},
@@ -184,7 +184,7 @@
   pages = {419--426},
   volume = {22},
   number = {3},
-  organization = {Wiley Online Library}
+  publisher = {Wiley}
 }
 @INPROCEEDINGS{DM97,
   author = {Debevec, Paul E and Malik, Jitendra},
@@ -192,7 +192,7 @@
   booktitle = {ACM SIGGRAPH 2008 classes},
   year = {2008},
   pages = {31},
-  organization = {ACM}
+  publisher = {ACM}
 }
 @INPROCEEDINGS{Dalal2005,
   author = {Dalal, Navneet and Triggs, Bill},
@@ -201,7 +201,7 @@
   year = {2005},
   pages = {886--893},
   volume = {1},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @INPROCEEDINGS{Davis97,
   author = {Davis, James W and Bobick, Aaron F},
@@ -209,7 +209,7 @@
   booktitle = {Computer Vision and Pattern Recognition, 1997. Proceedings., 1997 IEEE Computer Society Conference on},
   year = {1997},
   pages = {928--934},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @INPROCEEDINGS{EM11,
   author = {Gastal, Eduardo SL and Oliveira, Manuel M},
@@ -219,7 +219,7 @@
   pages = {69},
   volume = {30},
   number = {4},
-  organization = {ACM}
+  publisher = {ACM}
 }
 @ARTICLE{EP08,
   author = {Evangelidis, Georgios D and Psarakis, Emmanouil Z},
@@ -237,7 +237,7 @@
   booktitle = {Proceedings of the eleventh ACM international conference on Multimedia},
   year = {2003},
   pages = {2--10},
-  organization = {ACM}
+  publisher = {ACM}
 }
 @ARTICLE{FHT98,
   author = {Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert},
@@ -252,7 +252,7 @@
   pages = {249--256},
   volume = {21},
   number = {3},
-  organization = {ACM}
+  publisher = {ACM}
 }
 @INCOLLECTION{Farneback2003,
   author = {Farneb{\"a}ck, Gunnar},
@@ -269,7 +269,7 @@
   year = {2003},
   pages = {II--291},
   volume = {2},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @TECHREPORT{Felzenszwalb04,
   author = {Felzenszwalb, Pedro and Huttenlocher, Daniel},
@@ -303,7 +303,7 @@
   booktitle = {Proceedings of the 6th British conference on Machine vision (Vol. 2)},
   year = {1995},
   pages = {513--522},
-  organization = {BMVA Press}
+  publisher = {BMVA Press}
 }
 @ARTICLE{fitzgibbon1999,
   abstract = {This work presents a new efficient method for fitting
@@ -371,7 +371,7 @@
   booktitle = {Computer Vision and Pattern Recognition (CVPR), 2011 IEEE Conference on},
   year = {2011},
   pages = {225--232},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @ARTICLE{GW03,
   author = {Ward, Greg},
@@ -389,7 +389,7 @@
   booktitle = {American Control Conference (ACC), 2012},
   year = {2012},
   pages = {4305--4312},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @ARTICLE{Guil1999,
   author = {Guil, N and Gonzalez-Linares, Jos{\'e} Mar{\'\i}a and Zapata, Emilio L},
@@ -486,7 +486,7 @@
   booktitle = {Computer Vision, 2003. Proceedings. Ninth IEEE International Conference on},
   year = {2003},
   pages = {1033--1040},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @INPROCEEDINGS{LCS11,
   author = {Leutenegger, Stefan and Chli, Margarita and Siegwart, Roland Yves},
@@ -494,7 +494,7 @@
   booktitle = {Computer Vision (ICCV), 2011 IEEE International Conference on},
   year = {2011},
   pages = {2548--2555},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @ARTICLE{Louhichi07,
   author = {Louhichi, H. and Fournel, T. and Lavest, J. M. and Ben Aissia, H.},
@@ -523,7 +523,7 @@
   year = {2002},
   pages = {I--900},
   volume = {1},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @ARTICLE{Lowe:2004:DIF:993451.996342,
   author = {Lowe, David G.},
@@ -574,7 +574,7 @@
   booktitle = {Computer Graphics and Applications, 2007. PG'07. 15th Pacific Conference on},
   year = {2007},
   pages = {382--390},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @ARTICLE{MM06,
   author = {Mantiuk, Rafal and Myszkowski, Karol and Seidel, Hans-Peter},
@@ -599,7 +599,7 @@
   title = {An Invitation to 3-D Vision: From Images to Geometric Models},
   year = {2003},
   isbn = {0387008934},
-  publisher = {SpringerVerlag},
+  publisher = {Springer},
 }
 @ARTICLE{Malis,
   author = {Malis, Ezio and Vargas, Manuel and others},
@@ -622,7 +622,7 @@
   booktitle = {Image Processing and its Applications, 1992., International Conference on},
   year = {1992},
   pages = {303--306},
-  organization = {IET}
+  publisher = {IET}
 }
 @INCOLLECTION{Mitzel09,
   author = {Mitzel, Dennis and Pock, Thomas and Schoenemann, Thomas and Cremers, Daniel},
@@ -677,7 +677,7 @@
   pages = {313--318},
   volume = {22},
   number = {3},
-  organization = {ACM}
+  publisher = {ACM}
 }
 @INPROCEEDINGS{Puzicha1997,
   author = {Puzicha, Jan and Hofmann, Thomas and Buhmann, Joachim M},
@@ -685,7 +685,7 @@
   booktitle = {Computer Vision and Pattern Recognition, 1997. Proceedings., 1997 IEEE Computer Society Conference on},
   year = {1997},
   pages = {267--272},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @INPROCEEDINGS{RB99,
   author = {Robertson, Mark A and Borman, Sean and Stevenson, Robert L},
@@ -694,7 +694,7 @@
   year = {1999},
   pages = {159--163},
   volume = {3},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @ARTICLE{RD05,
   author = {Reinhard, Erik and Devlin, Kate},
@@ -712,7 +712,7 @@
   booktitle = {Neural Networks, 1993., IEEE International Conference on},
   year = {1993},
   pages = {586--591},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @INPROCEEDINGS{RRKB11,
   author = {Rublee, Ethan and Rabaud, Vincent and Konolige, Kurt and Bradski, Gary},
@@ -720,7 +720,7 @@
   booktitle = {Computer Vision (ICCV), 2011 IEEE International Conference on},
   year = {2011},
   pages = {2564--2571},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @TECHREPORT{RS04,
   author = {Szeliski, R},
@@ -787,7 +787,7 @@
   booktitle = {Computer Vision and Pattern Recognition, 1994. Proceedings CVPR'94., 1994 IEEE Computer Society Conference on},
   year = {1994},
   pages = {593--600},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @ARTICLE{Sklansky82,
   author = {Sklansky, Jack},
@@ -849,7 +849,7 @@
   year = {2001},
   pages = {II--509},
   volume = {2},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @INPROCEEDINGS{V03,
   author = {Kwatra, Vivek and Sch{\"o}dl, Arno and Essa, Irfan and Turk, Greg and Bobick, Aaron},
@@ -859,7 +859,7 @@
   pages = {277--286},
   volume = {22},
   number = {3},
-  organization = {ACM}
+  publisher = {ACM}
 }
 @INPROCEEDINGS{Viola01,
   author = {Viola, Paul and Jones, Michael J.},
@@ -868,7 +868,7 @@
   year = {2001},
   pages = {I--511},
   volume = {1},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @ARTICLE{Viola04,
   author = {Viola, Paul and Jones, Michael J.},
@@ -886,7 +886,7 @@
   booktitle = {Computer Vision and Pattern Recognition (CVPR), 2010 IEEE Conference on},
   year = {2010},
   pages = {263--270},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @MISC{Welch95,
   author = {Welch, Greg and Bishop, Gary},
@@ -899,7 +899,7 @@
   booktitle = {Computer Vision and Pattern Recognition (CVPR), 2010 IEEE Conference on},
   year = {2010},
   pages = {1458--1465},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @ARTICLE{Yuen90,
   author = {Yuen, HK and Princen, John and Illingworth, John and Kittler, Josef},
@@ -936,7 +936,7 @@
   year = {2004},
   pages = {28--31},
   volume = {2},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 @ARTICLE{Zivkovic2006,
   author = {Zivkovic, Zoran and van der Heijden, Ferdinand},
@@ -954,7 +954,7 @@
   booktitle = {Proceedings of the eighteenth annual ACM-SIAM symposium on Discrete algorithms},
   year = {2007},
   pages = {1027--1035},
-  organization = {Society for Industrial and Applied Mathematics}
+  publisher = {Society for Industrial and Applied Mathematics}
 }
 @ARTICLE{mitchell2005logistic,
   author = {Mitchell, Tom M},
@@ -970,7 +970,7 @@
   booktitle={Computer Vision-ACCV 2012 Workshops},
   pages={291--300},
   year={2013},
-  organization={Springer}
+  publisher={Springer}
 }
 @incollection{Liao2007,
   title={Learning multi-scale block local binary patterns for face recognition},
@@ -994,7 +994,7 @@
   booktitle={Computer Vision and Pattern Recognition, 2007. CVPR'07. IEEE Conference on},
   pages={1--8},
   year={2007},
-  organization={IEEE}
+  publisher={IEEE}
 }
 @incollection{bottou2010large,
   title={Large-scale machine learning with stochastic gradient descent},
@@ -1009,7 +1009,7 @@
   title = {An Efficient Algebraic Solution to the Perspective-Three-Point Problem},
   booktitle = {Computer Vision and Pattern Recognition (CVPR), 2017 IEEE Conference on},
   year = {2017},
-  organization = {IEEE}
+  publisher = {IEEE}
 }
 
 @ARTICLE{gonzalez,
