Add links to about 1/3 of references

--- a/doc/opencv.bib
+++ b/doc/opencv.bib
@@ -4,7 +4,8 @@
   booktitle = {Computer Vision--ECCV 2012},
   year = {2012},
   pages = {214--227},
-  publisher = {Springer}
+  publisher = {Springer},
+  url = {https://www.doc.ic.ac.uk/~ajd/Publications/alcantarilla_etal_eccv2012.pdf}
 }
 @article{ANB13,
   author = {Alcantarilla, Pablo F and Nuevo, Jes{\'u}s and Bartoli, Adrien},
@@ -13,7 +14,8 @@
   pages = {1281--1298},
   journal = {Trans. Pattern Anal. Machine Intell},
   volume = {34},
-  number = {7}
+  number = {7},
+  url = {http://www.bmva.org/bmvc/2013/Papers/paper0013/paper0013.pdf}
 }
 @inproceedings{Arandjelovic:2012:TTE:2354409.2355123,
   author = {Arandjelovic, Relja},
@@ -38,7 +40,8 @@
   journal = {ACM Transactions on Graphics (TOG)},
   volume = {2},
   number = {4},
-  publisher = {ACM}
+  publisher = {ACM},
+  url = {http://persci.mit.edu/pub_pdfs/spline83.pdf}
 }
 @article{BL07,
   author = {Brown, Matthew and Lowe, David G},
@@ -48,7 +51,8 @@
   journal = {International journal of computer vision},
   volume = {74},
   number = {1},
-  publisher = {Springer}
+  publisher = {Springer},
+  url = {http://matthewalunbrown.com/papers/ijcv2007.pdf}
 }
 @article{BT96,
   author = {Birchfield, Stan and Tomasi, Carlo},
@@ -58,7 +62,8 @@
   journal = {International Journal of Computer Vision},
   volume = {35},
   number = {3},
-  publisher = {Springer}
+  publisher = {Springer},
+  url = {https://users.cs.duke.edu/~tomasi/papers/tomasi/tomasiIjcv99.pdf}
 }
 @article{BT98,
   author = {Birchfield, Stan and Tomasi, Carlo},
@@ -68,7 +73,8 @@
   journal = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
   volume = {20},
   number = {4},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  url = {http://robotics.stanford.edu/~birch/publications/dissimilarity_pami1998.pdf}
 }
 @article{Ballard1981,
   author = {Ballard, Dana H},
@@ -78,7 +84,8 @@
   journal = {Pattern recognition},
   volume = {13},
   number = {2},
-  publisher = {Elsevier}
+  publisher = {Elsevier},
+  url = {https://www.cs.bgu.ac.il/~icbv161/wiki.files/Readings/1981-Ballard-Generalizing_the_Hough_Transform_to_Detect_Arbitrary_Shapes.pdf}
 }
 @article{Borgefors86,
   author = {Borgefors, Gunilla},
@@ -95,7 +102,8 @@
   title = {Pyramidal implementation of the affine lucas kanade feature tracker description of the algorithm},
   year = {2001},
   journal = {Intel Corporation},
-  volume = {5}
+  volume = {5},
+  url = {https://pdfs.semanticscholar.org/aa97/2b40c0f8e20b07e02d1fd320bc7ebadfdfc7.pdf}
 }
 @misc{BouguetMCT,
   author = {Bouguet, Jean-Yves},
@@ -108,7 +116,8 @@
   booktitle = {Applications of Computer Vision, 2000, Fifth IEEE Workshop on.},
   year = {2000},
   pages = {238--244},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  url = {http://web.cse.ohio-state.edu/~davis.1719/Publications/mva02.pdf}
 }
 @article{Bradski98,
   author = {Bradski, Gary R},
@@ -120,7 +129,8 @@
   title = {Classification and regression trees},
   author = {Breiman, Leo and Friedman, Jerome and Stone, Charles J and Olshen, Richard A},
   year = {1984},
-  publisher = {CRC press}
+  publisher = {CRC press},
+  url = {https://projecteuclid.org/download/pdf_1/euclid.aos/1016218223}
 }
 @incollection{Brox2004,
   author = {Brox, Thomas and Bruhn, Andres and Papenberg, Nils and Weickert, Joachim},
@@ -128,7 +138,8 @@
   booktitle = {Computer Vision-ECCV 2004},
   year = {2004},
   pages = {25--36},
-  publisher = {Springer}
+  publisher = {Springer},
+  url = {http://www.cs.auckland.ac.nz/~rklette/TeachAuckland.html/CIMAT/02a%20BBPW-ECCV04.pdf}
 }
 @article{Burges98,
   author = {Burges, Christopher JC},
@@ -138,7 +149,8 @@
   journal = {Data mining and knowledge discovery},
   volume = {2},
   number = {2},
-  publisher = {Springer}
+  publisher = {Springer},
+  url = {http://www.cmlab.csie.ntu.edu.tw/~cyy/learning/papers/SVM_Tutorial.pdf}
 }
 @inproceedings{CL12,
   author = {Lu, Cewu and Xu, Li and Jia, Jiaya},
@@ -146,7 +158,8 @@
   booktitle = {Computational Photography (ICCP), 2012 IEEE International Conference on},
   year = {2012},
   pages = {1--7},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  url = {https://www.computer.org/csdl/proceedings/iccp/2012/1662/00/06215215.pdf}
 }
 @article{Canny86,
   author = {Canny, John},
@@ -155,7 +168,8 @@
   pages = {679--698},
   journal = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
   number = {6},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.420.3300&rep=rep1&type=pdf}
 }
 @article{ChambolleEtAl,
   author = {Chambolle, Antonin and Caselles, Vicent and Cremers, Daniel and Novaga, Matteo and Pock, Thomas},
@@ -174,7 +188,8 @@
   pages = {257--266},
   volume = {21},
   number = {3},
-  publisher = {ACM}
+  publisher = {ACM},
+  url = {https://www.researchgate.net/profile/Julie_Dorsey/publication/220184746_Fast_Bilateral_Filtering_for_the_Display_of_High_-_dynamic_-_range_Images/links/54566b000cf26d5090a95f96/Fast-Bilateral-Filtering-for-the-Display-of-High-dynamic-range-Images.pdf}
 }
 @inproceedings{DM03,
   author = {Drago, Fr{\'e}d{\'e}ric and Myszkowski, Karol and Annen, Thomas and Chiba, Norishige},
@@ -184,7 +199,8 @@
   pages = {419--426},
   volume = {22},
   number = {3},
-  publisher = {Wiley}
+  publisher = {Wiley},
+  url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.69.8094&rep=rep1&type=pdf}
 }
 @inproceedings{DM97,
   author = {Debevec, Paul E and Malik, Jitendra},
@@ -192,7 +208,8 @@
   booktitle = {ACM SIGGRAPH 2008 classes},
   year = {2008},
   pages = {31},
-  publisher = {ACM}
+  publisher = {ACM},
+  url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.463.6496&rep=rep1&type=pdf}
 }
 @inproceedings{Dalal2005,
   author = {Dalal, Navneet and Triggs, Bill},
@@ -201,7 +218,8 @@
   year = {2005},
   pages = {886--893},
   volume = {1},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  url = {https://hal.inria.fr/docs/00/54/85/12/PDF/hog_cvpr2005.pdf}
 }
 @inproceedings{Davis97,
   author = {Davis, James W and Bobick, Aaron F},
@@ -209,7 +227,8 @@
   booktitle = {Computer Vision and Pattern Recognition, 1997. Proceedings., 1997 IEEE Computer Society Conference on},
   year = {1997},
   pages = {928--934},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  url = {http://alumni.media.mit.edu/~jdavis/Publications/publications_402.pdf}
 }
 @inproceedings{EM11,
   author = {Gastal, Eduardo SL and Oliveira, Manuel M},
@@ -219,7 +238,8 @@
   pages = {69},
   volume = {30},
   number = {4},
-  publisher = {ACM}
+  publisher = {ACM},
+  url = {http://www.inf.ufrgs.br/~eslgastal/DomainTransform/Gastal_Oliveira_SIGGRAPH2011_Domain_Transform.pdf}
 }
 @article{EP08,
   author = {Evangelidis, Georgios D and Psarakis, Emmanouil Z},
@@ -229,7 +249,8 @@
   journal = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
   volume = {30},
   number = {10},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  url = {https://hal.archives-ouvertes.fr/docs/00/86/43/85/PDF/PAMI_2008_preprint.pdf}
 }
 @inproceedings{FGD2003,
   author = {Li, Liyuan and Huang, Weimin and Gu, Irene YH and Tian, Qi},
@@ -237,12 +258,14 @@
   booktitle = {Proceedings of the eleventh ACM international conference on Multimedia},
   year = {2003},
   pages = {2--10},
-  publisher = {ACM}
+  publisher = {ACM},
+  url = {https://www.researchgate.net/profile/Liyuan_Li/publication/221571587_Foreground_object_detection_from_videos_containing_complex_background/links/09e4150bdf566d110c000000/Foreground-object-detection-from-videos-containing-complex-background.pdf}
 }
 @article{FHT98,
   author = {Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert},
   title = {Additive Logistic Regression: a Statistical View of Boosting},
-  year = {1998}
+  year = {1998},
+  url = {https://projecteuclid.org/download/pdf_1/euclid.aos/1016218223}
 }
 @inproceedings{FL02,
   author = {Fattal, Raanan and Lischinski, Dani and Werman, Michael},
@@ -252,7 +275,8 @@
   pages = {249--256},
   volume = {21},
   number = {3},
-  publisher = {ACM}
+  publisher = {ACM},
+  url = {https://www.researchgate.net/profile/Dani_Lischinski/publication/2530899_Gradient_Domain_High_Dynamic_Range_Compression/links/00463524c3f5cd2e34000000/Gradient-Domain-High-Dynamic-Range-Compression.pdf}
 }
 @incollection{Farneback2003,
   author = {Farneb{\"a}ck, Gunnar},
@@ -260,7 +284,8 @@
   booktitle = {Image Analysis},
   year = {2003},
   pages = {363--370},
-  publisher = {Springer}
+  publisher = {Springer},
+  url = {https://arxiv.org/pdf/1808.01752}
 }
 @inproceedings{Farsiu03,
   author = {Farsiu, Sina and Robinson, Dirk and Elad, Michael and Milanfar, Peyman},
@@ -269,13 +294,15 @@
   year = {2003},
   pages = {II--291},
   volume = {2},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  url = {http://www.academia.edu/download/42361965/ICIP2003SR.pdf}
 }
 @techreport{Felzenszwalb04,
   author = {Felzenszwalb, Pedro and Huttenlocher, Daniel},
   title = {Distance transforms of sampled functions},
   year = {2004},
-  institution = {Cornell University}
+  institution = {Cornell University},
+  url = {http://www.theoryofcomputing.org/articles/v008a019/v008a019.pdf}
 }
 @article{Felzenszwalb10,
   author = {Felzenszwalb, Pedro F and Girshick, Ross B and McAllester, David and Ramanan, Deva},
@@ -285,7 +312,8 @@
   journal = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
   volume = {32},
   number = {9},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  url = {http://lear.inrialpes.fr/~oneata/reading_group/dpm.pdf}
 }
 @article{Felzenszwalb2006,
   author = {Felzenszwalb, Pedro F and Huttenlocher, Daniel P},
@@ -295,7 +323,8 @@
   journal = {International journal of computer vision},
   volume = {70},
   number = {1},
-  publisher = {Springer}
+  publisher = {Springer},
+  url = {http://www.cs.duke.edu/research/AI/papers/Felzenszwalb06.pdf}
 }
 @inproceedings{Fitzgibbon95,
   author = {Fitzgibbon, Andrew W and Fisher, Robert B},
@@ -303,7 +332,8 @@
   booktitle = {Proceedings of the 6th British conference on Machine vision (Vol. 2)},
   year = {1995},
   pages = {513--522},
-  publisher = {BMVA Press}
+  publisher = {BMVA Press},
+  url = {https://www.researchgate.net/profile/Robert_Fisher5/publication/2237785_A_Buyer's_Guide_to_Conic_Fitting/links/0fcfd50f59aeded518000000/A-Buyers-Guide-to-Conic-Fitting.pdf}
 }
 @article{fitzgibbon1999,
   abstract = {This work presents a new efficient method for fitting ellipses to scattered data. Previous algorithms either fitted general conics or were computationally expensive. By minimizing the algebraic distance subject to the constraint 4ac-b<sup>2</sup>=1, the new method incorporates the ellipticity constraint into the normalization factor. The proposed method combines several advantages: It is ellipse-specific, so that even bad data will always return an ellipse. It can be solved naturally by a generalized eigensystem. It is extremely robust, efficient, and easy to implement},
@@ -317,7 +347,8 @@
   pmid = {708},
   title = {Direct least square fitting of ellipses},
   volume = {21},
-  year = {1999}
+  year = {1999},
+  url = {https://pdfs.semanticscholar.org/090d/25f94cb021bdd3400a2f547f989a6a5e07ec.pdf}
 }
 @article{taubin1991,
   abstract = {The author addresses the problem of parametric representation and estimation of complex planar curves in 2-D surfaces in 3-D, and nonplanar space curves in 3-D. Curves and surfaces can be defined either parametrically or implicitly, with the latter representation used here. A planar curve is the set of zeros of a smooth function of two variables <e1>x</e1>-<e1>y</e1>, a surface is the set of zeros of a smooth function of three variables <e1>x</e1>-<e1>y</e1>-<e1>z</e1>, and a space curve is the intersection of two surfaces, which are the set of zeros of two linearly independent smooth functions of three variables <e1>x</e1>-<e1>y</e1>-<e1>z</e1> For example, the surface of a complex object in 3-D can be represented as a subset of a single implicit surface, with similar results for planar and space curves. It is shown how this unified representation can be used for object recognition, object position estimation, and segmentation of objects into meaningful subobjects, that is, the detection of `interest regions' that are more complex than high curvature regions and, hence, more useful as features for object recognition},
@@ -330,7 +361,8 @@
   pages = {1115--1138},
   title = {Estimation of planar curves, surfaces, and nonplanar space curves defined by implicit equations with applications to edge and range image segmentation},
   volume = {13},
-  year = {1991}
+  year = {1991},
+  url = {https://pdfs.semanticscholar.org/27a7/90a0ca254006fbe37d41e1751516911607ca.pdf}
 }
 @inproceedings{G11,
   author = {Grundmann, Matthias and Kwatra, Vivek and Essa, Irfan},
@@ -338,7 +370,8 @@
   booktitle = {Computer Vision and Pattern Recognition (CVPR), 2011 IEEE Conference on},
   year = {2011},
   pages = {225--232},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  url = {https://smartech.gatech.edu/bitstream/handle/1853/44611/2011-Grundmann-AVSWROCP.pdf?sequence=1&isAllowed=y}
 }
 @article{GW03,
   author = {Ward, Greg},
@@ -348,7 +381,8 @@
   journal = {Journal of graphics tools},
   volume = {8},
   number = {2},
-  publisher = {Taylor \& Francis}
+  publisher = {Taylor \& Francis},
+  url = {http://pages.cs.wisc.edu/~lizhang/courses/cs766-2008f/projects/hdr/jgtpap2.pdf}
 }
 @inproceedings{Gold2012,
   author = {Godbehere, Andrew B and Matsukawa, Akihiro and Goldberg, Ken},
@@ -356,7 +390,8 @@
   booktitle = {American Control Conference (ACC), 2012},
   year = {2012},
   pages = {4305--4312},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.228.1735&rep=rep1&type=pdf}
 }
 @article{Guil1999,
   author = {Guil, N and Gonzalez-Linares, Jos{\'e} Mar{\'\i}a and Zapata, Emilio L},
@@ -376,7 +411,8 @@
   journal = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
   volume = {30},
   number = {2},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  url = {http://www.openrs.org/photogrammetry/2015/SGM%202008%20PAMI%20-%20Stereo%20Processing%20by%20Semiglobal%20Matching%20and%20Mutual%20Informtion.pdf}
 }
 @article{HTF01,
   author = {Trevor, Hastie and Robert, Tibshirani and Jerome, Friedman},
@@ -385,7 +421,8 @@
   pages = {371--406},
   journal = {New York: Springer-Verlag},
   volume = {1},
-  number = {8}
+  number = {8},
+  url = {http://www.stat.auckland.ac.nz/~yee/784/files/ch09AdditiveModelsTrees.pdf}
 }
 @article{Hartley99,
   author = {Hartley, Richard I},
@@ -395,13 +432,15 @@
   journal = {International Journal of Computer Vision},
   volume = {35},
   number = {2},
-  publisher = {Springer}
+  publisher = {Springer},
+  url = {http://www.cs.ait.ac.th/~mdailey/cvreadings/Hartley-Rectify.pdf}
 }
 @book{HartleyZ00,
   author = {Hartley, Richard and Zisserman, Andrew},
   title = {Multiple view geometry in computer vision},
   year = {2003},
-  publisher = {Cambridge university press}
+  publisher = {Cambridge university press},
+  url = {http://cds.cern.ch/record/1598612/files/0521540518_TOC.pdf}
 }
 @article{Horn81,
   author = {Horn, Berthold KP and Schunck, Brian G},
@@ -409,7 +448,8 @@
   year = {1981},
   pages = {185--203},
   journal = {Artificial Intelligence},
-  volume = {17}
+  volume = {17},
+  url = {https://dspace.mit.edu/bitstream/handle/1721.1/6337/%EE%80%80AIM%EE%80%81-572.pdf?sequence=2}
 }
 @article{Hu62,
   author = {Hu, Ming-Kuei},
@@ -424,7 +464,8 @@
 @article{Javier2012,
   author = {S{\'a}nchez P{\'e}rez, Javier and Meinhardt-Llopis, Enric and Facciolo, Gabriele},
   title = {TV-L1 optical flow estimation},
-  year = {2012}
+  year = {2012},
+  url = {http://www.ipol.im/pub/art/2013/26/article_lr.pdf}
 }
 @article{KleeLaskowski85,
   author = {Klee, Victor and Laskowski, Michael C},
@@ -444,7 +485,8 @@
   journal = {Science},
   volume = {220},
   number = {4598},
-  publisher = {American Association for the Advancement of Science}
+  publisher = {American Association for the Advancement of Science},
+  url = {http://sci2s.ugr.es/sites/default/files/files/Teaching/GraduatesCourses/Metaheuristicas/Bibliography/1983-Science-Kirkpatrick-sim_anneal.pdf}
 }
 @inproceedings{Kolmogorov03,
   author = {Kim, Junhwan and Kolmogorov, Vladimir and Zabih, Ramin},
