--- a/samples/android/qr-detection/res/values/strings.xml
+++ b/samples/android/qr-detection/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">OpenCV QR Detection</string>
+    <string name="app_name">OpenCV QR Detector</string>
 </resources>
